--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
 
-NEXT_PUBLIC_API_BASE_URL=http://109.205.178.197:8080/swagger-ui/index.html#/
+NEXT_PUBLIC_API_BASE_URL=http://hostel53bishkekkg.com/api/v1
