--- a/.env.local
+++ b/.env.local
@@ -1,3 +1,3 @@
 
 NEXT_PUBLIC_API_BASE_URL=https://hostel53bishkekkg.com/api/v1
-NEXT_PUBLIC_STATIC_ASSETS_URL=https://hostel53bishkekkg.com/
+NEXT_PUBLIC_STATIC_ASSETS_URL=https://hostel53bishkekkg.com
