--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "dev": "next dev",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "dev2": "node server.js"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "1.2.1",
