--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 
-NEXT_PUBLIC_API_BASE_URL=http://109.205.178.197:8080/api/v1
+#NEXT_PUBLIC_API_BASE_URL=http://109.205.178.197:8080/api/v1
 
-# NEXT_PUBLIC_API_BASE_URL=https://hostel53bishkekkg.com/api/v1/
+NEXT_PUBLIC_API_BASE_URL=https://hostel53bishkekkg.com/api/v1/
 NEXT_PUBLIC_STATIC_ASSETS_URL=https://hostel53bishkekkg.com
