--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@emotion/is-prop-valid": "1.2.1",
+    "@formatjs/intl-localematcher": "^0.6.2",
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-accordion": "1.1.2",
     "@radix-ui/react-alert-dialog": "1.0.5",
@@ -49,14 +50,18 @@
     "dayjs": "^1.11.13",
     "embla-carousel-react": "8.0.2",
     "framer-motion": "11.1.7",
+    "i18next": "^25.5.3",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "1.2.4",
     "lucide-react": "^0.378.0",
+    "negotiator": "^1.0.0",
     "next": "14.2.3",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "7.51.3",
+    "react-i18next": "^16.0.0",
     "react-resizable-panels": "^2.0.19",
     "recharts": "2.12.7",
     "sonner": "1.4.41",
