--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-i18next": "^16.0.0",
     "react-resizable-panels": "^2.0.19",
     "recharts": "2.12.7",
+    "sharp": "^0.34.4",
     "sonner": "1.4.41",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
